--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "express-fileupload": "^1.2.1",
+    "mongoose": "^5.12.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
